[gd_scene load_steps=10 format=3 uid="uid://bqn5w3eh2rivt"]

[ext_resource type="Script" path="res://scenes/Display.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://b3n3yxw2okk66" path="res://assets/audio/short_beep.wav" id="3"]
[ext_resource type="AudioStream" uid="uid://co871etcq0w4j" path="res://assets/audio/long_beep.ogg" id="4"]
[ext_resource type="FontVariation" uid="uid://b3huf8a2ie6uu" path="res://assets/font/200_trimmed.tres" id="4_3rov7"]
[ext_resource type="Theme" uid="uid://b1evs2a7h13oy" path="res://assets/main_theme.tres" id="4_o7ddp"]
[ext_resource type="FontVariation" uid="uid://ech6a44gjkma" path="res://assets/font/50_trimmed.tres" id="5_o6avl"]
[ext_resource type="FontVariation" uid="uid://bdlpo0x6gqswq" path="res://assets/font/100_trimmed.tres" id="6_vo3cj"]
[ext_resource type="FontVariation" uid="uid://cl6rn10f2dnr1" path="res://assets/font/600_trimmed.tres" id="7_8qq1s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_av35t"]

[node name="Display" type="Node"]
script = ExtResource("1")
fight_time_seconds = 90.0

[node name="CutAudioTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShortBeep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")

[node name="ReleaseBeep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")
volume_db = 2.364
pitch_scale = 1.27

[node name="LongBeep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_o7ddp")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RedName" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.827451, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0.67451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.796078, 0, 0.803922, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0.74902, 0.305882, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0.858824, 0.909804, 1)
theme_override_fonts/font = ExtResource("5_o6avl")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_av35t")
item_count = 14
selected = 0
popup/item_0/text = "Red Bot"
popup/item_0/id = 0
popup/item_1/text = "Arancinu"
popup/item_1/id = 1
popup/item_2/text = "LAG"
popup/item_2/id = 2
popup/item_3/text = "Sphiga"
popup/item_3/id = 3
popup/item_4/text = "Robonapoli"
popup/item_4/id = 4
popup/item_5/text = "Tau"
popup/item_5/id = 5
popup/item_6/text = "Lingua"
popup/item_6/id = 6
popup/item_7/text = "Handy"
popup/item_7/id = 7
popup/item_8/text = "Crocodile"
popup/item_8/id = 8
popup/item_9/text = "Devastator"
popup/item_9/id = 9
popup/item_10/text = "Elatant"
popup/item_10/id = 10
popup/item_11/text = "Hornet"
popup/item_11/id = 11
popup/item_12/text = "Banillo"
popup/item_12/id = 12
popup/item_13/text = "MAresciallo"
popup/item_13/id = 13

[node name="BlueName" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0.827451, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0.67451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.796078, 0, 0.803922, 1)
theme_override_colors/font_focus_color = Color(0, 0, 1, 1)
theme_override_colors/font_disabled_color = Color(0.74902, 0.305882, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0.858824, 0.909804, 1)
theme_override_fonts/font = ExtResource("5_o6avl")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_av35t")
item_count = 14
selected = 0
popup/item_0/text = "Red Bot"
popup/item_0/id = 0
popup/item_1/text = "Arancinu"
popup/item_1/id = 1
popup/item_2/text = "LAG"
popup/item_2/id = 2
popup/item_3/text = "Sphiga"
popup/item_3/id = 3
popup/item_4/text = "Robonapoli"
popup/item_4/id = 4
popup/item_5/text = "Tau"
popup/item_5/id = 5
popup/item_6/text = "Lingua"
popup/item_6/id = 6
popup/item_7/text = "Handy"
popup/item_7/id = 7
popup/item_8/text = "Crocodile"
popup/item_8/id = 8
popup/item_9/text = "Devastator"
popup/item_9/id = 9
popup/item_10/text = "Elatant"
popup/item_10/id = 10
popup/item_11/text = "Hornet"
popup/item_11/id = 11
popup/item_12/text = "Banillo"
popup/item_12/id = 12
popup/item_13/text = "MAresciallo"
popup/item_13/id = 13

[node name="TopHalf" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="RedContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TopHalf"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="RedLabel" type="Label" parent="MarginContainer/VBoxContainer/TopHalf/RedContainer"]
custom_minimum_size = Vector2(290, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_3rov7")
theme_override_font_sizes/font_size = 200
text = "0"

[node name="TimerContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TopHalf"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 35
alignment = 1

[node name="ClockLabel" type="Label" parent="MarginContainer/VBoxContainer/TopHalf/TimerContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("4_3rov7")
theme_override_font_sizes/font_size = 200
text = "2:00"

[node name="ReleaseLabel" type="Label" parent="MarginContainer/VBoxContainer/TopHalf/TimerContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("5_o6avl")
theme_override_font_sizes/font_size = 50
text = "Release"

[node name="BlueContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TopHalf"]
layout_mode = 2

[node name="BlueLabel" type="Label" parent="MarginContainer/VBoxContainer/TopHalf/BlueContainer"]
custom_minimum_size = Vector2(290, 0)
layout_mode = 2
size_flags_horizontal = 9
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("4_3rov7")
theme_override_font_sizes/font_size = 200
text = "0"
horizontal_alignment = 2

[node name="BottomPart" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="RightSide" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BottomPart"]
layout_mode = 2
size_flags_horizontal = 2

[node name="RedBufferLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomPart/RightSide"]
layout_mode = 2
size_flags_vertical = 10
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_vo3cj")
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1

[node name="RedLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomPart/RightSide"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_8qq1s")
theme_override_font_sizes/font_size = 600
text = "0"

[node name="LeftSide" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BottomPart"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="BlueBufferLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomPart/LeftSide"]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("6_vo3cj")
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1

[node name="BlueLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomPart/LeftSide"]
layout_mode = 2
size_flags_horizontal = 9
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("7_8qq1s")
theme_override_font_sizes/font_size = 600
text = "0"

[connection signal="timeout" from="CutAudioTimer" to="." method="_on_CutAudioTimer_timeout"]
